# Adaptive-Autosar-NM

./: CMakeLists.txt  Makefile  README.md  quick_start.sh  socket_test.cpp
include/: README.md  prototype.cpp  prototype.h
internet/: package-lock.json  package.json
internet/public/: index.html
internet/src/: App.vue  list.vue  login.vue  main.js
internet/src/components/: decideElementToShow.vue  tasks.vue
internet/tests/unit/: example.spec.js  testDecideElementToShow.spec.js  testList.spec.js  testTasks.spec.js
socket/: client.cpp  non_block.cpp  server.cpp  socket.cpp
src/: main.cpp  main1.cpp  main2.cpp  main3.cpp
src/ara/com/: com_set_handler.cpp  com_set_handler.hpp  fakecom.hpp
src/ara/core/: error_code.h  future.h  instance_specifier.h  result.h  vector.h
src/ara/nm/: CallbackTimer.cpp  IStateMachine.hpp  NetworkStateType.hpp  NetworkState_HandleImpl.cpp  NetworkState_HandleImpl.hpp  NetworkState_HandleSkeleton.cpp  NetworkState_HandleSkeleton.hpp  NmConfigReader.cpp  NmConfigReader.hpp  nm.cpp  nm.hpp
